--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "3.7"
 # command to install dependencies
 install:
+  - cd ccd-simulation
   - pip install -r requirements.txt
 # command to run tests
 script:
