added time tools library

--- a/UtilityFunctions/setup.cfg
+++ b/UtilityFunctions/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = mats_utility
-version = 0.0.1
+version = 0.0.2
 author = Ole Martin Christensen
 author_email = olemartin.christensen@misu.su.se
 description = Package for utility functions for MATS
@@ -17,6 +17,11 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires =
+    ephem
+    numpy
+    xarray
+    joblib
 
 [options.packages.find]
 where = src
