--- a/UtilityFunctions/setup.cfg
+++ b/UtilityFunctions/setup.cfg
@@ -24,6 +24,9 @@ install_requires =
     joblib
     skyfield
     plotly
+    moviepy
+    cartopy
+    imageio
 
 [options.packages.find]
 where = src
