Added shift_image function to imagetools. It used to be in matslevel1 remository in grid_image. And changed hardcoded maximum xshift to be correct when flipping IR1,3, UV1,2.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 CodeCalibrationReportLM/images
 CodeCalibrationReportLM/outputdata
 CodeCalibrationReportLM/.*
+Operational_analysis/commisioning/Lindas/images
