--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ CodeCalibrationReportLM/images
 CodeCalibrationReportLM/outputdata
 CodeCalibrationReportLM/.*
 Operational_analysis/commisioning/Lindas/images
+Operational_analysis/commisioning/data
